# Analise-de-Carteira

./: .env.example  .firebaserc  .gitignore  CLAUDE.md  criar_atalho.ps1  docker-compose.yml  firebase.json  firestore.rules  fix_parser.py  iniciar.bat  pyproject.toml
.claude/: settings.json
.claude/hooks/: post_write.py
.claude/rules/: architecture.md  domain.md  testing.md
.claude/skills/analise-balanco/: SKILL.md
.claude/skills/backtest-report/: SKILL.md
.claude/skills/check-architecture/: SKILL.md
.claude/skills/new-entity/: SKILL.md
.claude/skills/new-use-case/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/review-financeiro/: SKILL.md
.claude/skills/test/: SKILL.md
.github/workflows/: deploy.yml
docs/: INDEX.md
docs/01-mercado-financeiro-brasileiro/: estrutura-mercado.md
docs/02-regulamentacao-e-compliance/: regulamentacao-trading-algoritmico.md
docs/03-estrategias-quantitativas/: estrategias-quant.md
docs/04-analise-tecnica/: analise-tecnica-avancada.md
docs/05-analise-fundamentalista/: analise-fundamentalista.md
docs/06-machine-learning-trading/: ml-ai-trading.md
docs/07-gestao-de-risco/: gestao-risco.md
docs/08-infraestrutura-apis-dados/: infraestrutura-apis.md
docs/09-tributacao-custos/: tributacao-custos.md
docs/10-backtesting-simulacao/: backtesting-simulacao.md
docs/11-psicologia-behavioral-finance/: behavioral-finance.md
docs/12-casos-de-estudo/: casos-estudo-referencias.md
docs/13-resultado-acoes-ir/: STATUS.md
docs/13-resultado-acoes-ir/01-estrutura-notas-sinacor/: estrutura-notas-sinacor.md
docs/13-resultado-acoes-ir/02-tributacao-por-classe-ativo/: tributacao-por-classe-ativo.md
docs/13-resultado-acoes-ir/03-preco-medio-apuracao/: preco-medio-apuracao.md
docs/13-resultado-acoes-ir/04-compensacao-prejuizo/: compensacao-prejuizo.md
docs/13-resultado-acoes-ir/05-darf-apuracao-mensal/: darf-apuracao-mensal.md
docs/13-resultado-acoes-ir/06-implementacao-tecnica/: implementacao-tecnica.md
docs/13-resultado-acoes-ir/07-analise-gaps-bloqueadores/: analise-gaps.md
docs/14-spin-selling-vendas/: spin-selling-assessoria.md
docs/claude-code-config/: claude-code-guia-completo.md  prompt-engineering-avancado.md  regras-dominio-extraidas.md  regras-extraidas.md
docs/infra/: containers-e-cloud-run.md
docs/referencias/: referencias-consolidadas.md
docs/software-engineering/: INDEX.md
docs/software-engineering/01-ddd/: domain-driven-design.md
docs/software-engineering/02-cqrs/: cqrs.md
docs/software-engineering/03-padrao-saga/: padrao-saga.md
docs/software-engineering/04-arquitetura-hexagonal/: arquitetura-hexagonal.md
docs/software-engineering/05-estrutura-camadas/: estrutura-camadas.md
docs/software-engineering/06-circuit-breaker/: circuit-breaker.md
docs/software-engineering/07-idempotencia/: idempotencia.md
docs/software-engineering/08-observabilidade-otel/: observabilidade-otel.md
docs/software-engineering/09-testes-unitarios/: testes-unitarios.md
docs/software-engineering/10-testes-integracao-e2e/: testes-integracao-e2e.md
docs/software-engineering/11-ci-cd/: ci-cd.md
docs/software-engineering/12-injecao-dependencia/: injecao-dependencia.md
frontend/: env.example  next.config.ts  package-lock.json  package.json
frontend/public/: projecao_carteira.html
frontend/scripts/: copy-pdfjs-assets.mjs
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: AuthGuard.tsx
frontend/src/contexts/: AuthContext.tsx  DataRefreshContext.tsx
frontend/src/lib/: api.ts  firebase.ts  firestore-rest.ts  firestore.ts  formatters.ts
functions/: .gitignore  main.py  requirements.txt
src/: main.py
src/application/commands/: analisar_carteira.py  analyze_company.py  consolidar_carteiras.py  criar_cliente.py  processar_excel.py  processar_extrato.py
src/application/dto/: analysis_dto.py  argumento_venda_dto.py  carteira_dto.py  (+2 more)
src/assistente/: __init__.py
src/config/: app_factory.py  container.py  settings.py
tests/: conftest.py
tests/e2e/: test_crm_stress.py
tests/integration/: conftest.py
(+215 files in other folders)
